# Aether-firmware

./: README.md
ros2_samples/src/sample_action_cpp/: CMakeLists.txt
ros2_samples/src/sample_action_interface/: CMakeLists.txt
ros2_samples/src/sample_action_interface/action/: Fibonacci.action
ros2_samples/src/sample_srvcli/: CMakeLists.txt  package.xml
ros2_samples/src/sample_srvcli/src/: sample_client.cpp  sample_server.cpp
ros2_samples/src/sample_topic/: CMakeLists.txt  package.xml
src/aether_interfaces/: CMakeLists.txt  package.xml
src/aether_interfaces/msg/: JointAngles.msg  Mode.msg  MotorCommands.msg
src/aether_mode_manager/: CMakeLists.txt  package.xml
src/aether_mode_manager/src/: mode_manager.cpp
src/aether_motor_control/: CMakeLists.txt  package.xml
src/aether_motor_control/src/: motor_controller.cpp
src/aether_socket_bridge/: CMakeLists.txt  package.xml
src/aether_socket_bridge/src/: socket_bridge.cpp
src/motor_control/: Makefile  main.cpp  motor_control.cpp  motor_control.h  test_motor
src/motor_control/STServo/: SCServo.h
src/ros2_samples/src/sample_action_cpp/: package.xml
src/ros2_samples/src/sample_action_cpp/src/: sample_action_client.cpp  sample_action_server.cpp
src/ros2_samples/src/sample_action_interface/: package.xml
src/ros2_samples/src/sample_topic/src/: sample_publisher.cpp  sample_subscriber.cpp
