cmake_minimum_required(VERSION 3.8)
project(sample_srvcli)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(example_interfaces REQUIRED)

add_executable(server src/sample_server.cpp)
target_link_libraries(server PUBLIC
  ${example_interfaces_TARGETS}
  rclcpp::rclcpp
)

add_executable(client src/sample_client.cpp)
target_link_libraries(client PUBLIC
  ${example_interfaces_TARGETS}
  rclcpp::rclcpp
)
target_link_libraries(client PUBLIC rclcpp::rclcpp ${example_interfaces_TARGETS})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(TARGETS
  server
  client
  DESTINATION lib/${PROJECT_NAME})

ament_package()